# Vision-Based-Desktop-Automation-with-Dynamic-Icon-Grounding

./: README.md  main.py  pyproject.toml  workingfile.py
